--- a/Youtube_SentimentAnalysis.ipynb
+++ b/Youtube_SentimentAnalysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPg9GaXSpFnL4/f+V5QP9dJ",
+      "authorship_tag": "ABX9TyMT1K1Z6gQsqJDRPOgE4MEa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,14 +42,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 767
+          "height": 680
         },
         "id": "Jt4D-U71rsHS",
-        "outputId": "3aecad11-d450-4ad6-a53e-21052a07121e"
+        "outputId": "f042d21c-a333-4cc4-9610-65002de1c176"
       },
       "outputs": [
         {
@@ -59,7 +59,7 @@
             "Setting queue=True in a Colab notebook requires sharing enabled. Setting `share=True` (you can turn this off by setting `share=False` in `launch()` explicitly).\n",
             "\n",
             "Colab notebook detected. This cell will run indefinitely so that you can see errors and logs. To turn off, set debug=False in launch().\n",
-            "Running on public URL: https://35541fae4088d1522a.gradio.live\n",
+            "Running on public URL: https://2fab5df0afa9722b5a.gradio.live\n",
             "\n",
             "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
           ]
@@ -71,7 +71,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<div><iframe src=\"https://35541fae4088d1522a.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+              "<div><iframe src=\"https://2fab5df0afa9722b5a.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
             ]
           },
           "metadata": {}
@@ -80,21 +80,20 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Analyzing comments...\n",
-            "Average Polarity: -0.11599523809523812\n",
-            "The Video has got a Negative response\n",
-            "The comment with most positive sentiment: event management government, they know only publicity.. and making hero... no interest in taking care of system and employees... unfortunate... minister got one more chance to open the line and say bharat mata ki jhai! ... and forget...\n",
-            " with score 0.4597 and length 237\n",
-            "The comment with most negative sentiment: its an accident &amp; always unfortunate but what is happening with the people of west bengal, after post poll violence is concerned and didi should  resign for failing to protect the common people\n",
-            " with score -0.9306 and length 198\n"
+            "Keyboard interruption in main thread... closing server.\n",
+            "Killing tunnel 127.0.0.1:7862 <> https://2fab5df0afa9722b5a.gradio.live\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 61
         }
       ],
       "source": [
-        "# !pip install emoji\n",
-        "# !pip install vaderSentiment\n",
-        "# !pip install goolge-api-python-client\n",
-        "# !pip install --upgrade gradio\n",
         "from googleapiclient.discovery import build\n",
         "import re\n",
         "import emoji\n",
@@ -171,7 +170,7 @@
         "  comments = f.readlines()\n",
         "  f.close()\n",
         "\n",
-        "  print(\"Analyzing comments...\")\n",
+        "  # print(\"Analyzing comments...\")\n",
         "  for index,items in enumerate(comments):\n",
         "    polarity = sentiment_scores(items,polarity)\n",
         "\n",
@@ -182,19 +181,19 @@
         "    else:\n",
         "      neutral_comments.append(items)\n",
         "\n",
-        "  avg_polarity = sum(polarity)/len(polarity)\n",
-        "  print(\"Average Polarity:\",avg_polarity)\n",
-        "  if avg_polarity > 0.05:\n",
-        "    print(\"The Video has got a Positive response\")\n",
-        "  elif avg_polarity < -0.05:\n",
-        "    print(\"The Video has got a Negative response\")\n",
-        "  else:\n",
-        "    print(\"The Video has got a Neutral response\")\n",
+        "  # avg_polarity = sum(polarity)/len(polarity)\n",
+        "  # print(\"Average Polarity:\",avg_polarity)\n",
+        "  # if avg_polarity > 0.05:\n",
+        "  #   print(\"The Video has got a Positive response\")\n",
+        "  # elif avg_polarity < -0.05:\n",
+        "  #   print(\"The Video has got a Negative response\")\n",
+        "  # else:\n",
+        "  #   print(\"The Video has got a Neutral response\")\n",
         "\n",
-        "  print(\"The comment with most positive sentiment:\", comments[polarity.index(max(\n",
-        "      polarity))],\"with score\",max(polarity),\"and length\",len(comments[polarity.index(max(polarity))]))\n",
-        "  print(\"The comment with most negative sentiment:\",comments[polarity.index(min(\n",
-        "    polarity))],\"with score\",min(polarity),\"and length\",len(comments[polarity.index(min(polarity))]))\n",
+        "  # print(\"The comment with most positive sentiment:\", comments[polarity.index(max(\n",
+        "  #     polarity))],\"with score\",max(polarity),\"and length\",len(comments[polarity.index(max(polarity))]))\n",
+        "  # print(\"The comment with most negative sentiment:\",comments[polarity.index(min(\n",
+        "  #   polarity))],\"with score\",min(polarity),\"and length\",len(comments[polarity.index(min(polarity))]))\n",
         "\n",
         "  positive_count = len(positive_comments)\n",
         "  negative_count = len(negative_comments)\n",
@@ -275,7 +274,7 @@
         "demo = gr.Interface(fn=sentiment_analysis,\n",
         "                    inputs=gr.Textbox(label=\"URL\", placeholder=\"Enter the video URL\"),\n",
         "                    outputs=[\"html\",\"image\",\"html\"],\n",
-        "                    title=\"Sentiment Analysis\",\n",
+        "                    title=\"Youtube video analysis\",\n",
         "                    css = css )\n",
         "\n",
         "demo.launch(debug=True)"
