--- a/Youtube_SentimentAnalysis.ipynb
+++ b/Youtube_SentimentAnalysis.ipynb
@@ -103,7 +103,7 @@
         "\n",
         "\n",
         "def sentiment_analysis(url):\n",
-        "  API_KEY = 'AIzaSyDWx8MjgfWgNlD5uJ2sKNpfI7WGGEd19d4'\n",
+        "  API_KEY = 'AIxxxxxxxxxxxxxx'\n",
         "  youtube = build('youtube','v3', developerKey=API_KEY)\n",
         "  video_id = url[-11:]\n",
         "\n",
